# rendering-engine

./: .gitignore  CMakeLists.txt  README.md  main
assets/models/box/: box.mtl
assets/models/dragon/: dragon.mtl  dragon.obj.mtl
assets/models/dragon_vn/: dragon.mtl
assets/models/plane/: plane.mtl  plane.obj.mtl
include/: Camera.h  DirectionalLight.h  Light.h  Mesh.h  Model.h  PointLight.h  Skybox.h
include/shaders/: Shader.h
lib/: CMakeLists.txt
lib/SOIL/projects/codeblocks/: SOIL.depend
lib/glew-2.0.0/: glew.pc
lib/glfw-3.2.1/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
lib/glfw-3.2.1/docs/: Doxyfile  Makefile  cmake_install.cmake
lib/glfw-3.2.1/docs/html/: annotated.html  bug.html  build_8dox.html  build_guide.html  classes.html  compat_8dox.html  compat_guide.html  compile_8dox.html  compile_guide.html  context_8dox.html  context_guide.html  dir_7d046523570a4bf058ddf3b10b545b6c.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  glfw3_8h.html  glfw3_8h_source.html  glfw3native_8h.html  glfw3native_8h_source.html  globals.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_defs_b.html  globals_defs_c.html  globals_defs_d.html  globals_defs_e.html  globals_defs_f.html  globals_defs_g.html  globals_defs_h.html  globals_defs_i.html  globals_defs_j.html  globals_defs_k.html  globals_defs_l.html  globals_defs_m.html  globals_defs_n.html  globals_defs_o.html  globals_defs_p.html  (+59 more)
lib/glfw-3.2.1/examples/: Makefile  boing  cmake_install.cmake  gears  heightmap  particles  simple  splitview  wave
lib/glfw-3.2.1/src/: Makefile  cmake_install.cmake
lib/glfw-3.2.1/tests/: Makefile  clipboard  cmake_install.cmake  cursor  empty  events  gamma  glfwinfo  icon  iconify  joysticks  monitors  msaa  reopen  sharing  tearing  threads  timeout  title  windows
src/: Camera.cpp  Mesh.cpp  Model.cpp  Skybox.cpp  main.cpp
src/shaders/: default.fs  default.vs  gouraud.fs  gouraud.vs  light_shader.fs  light_shader.vs  model.fs  model.vs  phong_shader.fs  phong_shader.vs  phong_texture.fs  phong_texture.vs  skybox.fs  skybox.vs
